5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_1016.log
== TEST (2019-03-30 20:57:21) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
s=l1+l2+l3/2
from math import*
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:57:40) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
s=l1+l2+l3/2
from math import*
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.131689
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:59:08) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
s=l1+l2+l3/2
from math import*
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:59:20) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
s=l1+l2+l3/2
from math import*
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.131491
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:01:22) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
from math import*
s=l1+l2+l3//2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
607.18208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:01:35) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
from math import*
s=l1+l2+l3//2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.153047
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
607.18208
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4556.84101
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:03:13) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
from math import* sqrt
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- ERROR:
File "XXXX", line 4
    from math import* sqrt
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:03:48) 
-- CODE:
l1=float(input("l1"))
l2=float(input("l2"))
l3=float(input("l3"))
from math import* 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:04:17) 
-- CODE:
l1=float(input("a"))
l2=float(input("b"))
l3=float(input("c"))
from math import* 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:04:27) 
-- CODE:
l1=float(input("a"))
l2=float(input("b"))
l3=float(input("c"))
from math import* 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.154927
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:05:40) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import* 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:05:54) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import* 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.153477
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:06:10) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import*sqrt 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- ERROR:
File "XXXX", line 4
    from math import*sqrt 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:06:16) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import sqrt 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:06:32) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import sqrt 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.172671
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:06:42) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import sqrt() 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- ERROR:
File "XXXX", line 4
    from math import sqrt() 
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:07:53) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import sqrt 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:08:06) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import sqrt 
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.16852
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:08:50) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:09:16) 
-- CODE:
l1=float(input("comprimento1"))
l2=float(input("comprimento2"))
l3=float(input("comprimento3"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.202492
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:09:49) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:09:57) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.143607
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:10:52) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:11:10) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.153602
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:24:23) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:24:46) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.149939
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:26:42) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:27:25) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
a=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(a,5))
-- EXECUTION TIME:
0.175627
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:30:47) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:31:08) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- EXECUTION TIME:
0.137258
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:09) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:09) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:10) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:11) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:32:26) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- EXECUTION TIME:
0.184664
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:32) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:46) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:32:59) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
from math import*
s=l1+l2+l3/2
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- EXECUTION TIME:
0.150902
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:33:39) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=l1+l2+l3/2
from math import*
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:33:54) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=l1+l2+l3/2
from math import*
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- EXECUTION TIME:
0.166666
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:34:10) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=l1+l2+l3/2
from math import*
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:34:16) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=l1+l2+l3/2
from math import*
area=sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- EXECUTION TIME:
0.17583
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:34:49) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=l1+l2+l3/2
from math import*
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:34:59) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=l1+l2+l3/2
from math import*
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- EXECUTION TIME:
0.127841
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:35:56) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=(l1+l2+l3)/2
from math import*
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:36:10) 
-- CODE:
l1=float(input("comprimentoa"))
l2=float(input("comprimentob"))
l3=float(input("comprimentoc"))
s=(l1+l2+l3)/2
from math import*
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area,5))
-- EXECUTION TIME:
0.138996
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
